# scrap-applications

./: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Dockerfile  README.md  database.py  db.sqlite3  docker-compose.yml  home.py  main.py  manage.py  pyproject.toml  requirements.txt
backend/apps/approvals/: admin.py  apps.py  (+4 more)
backend/config/: asgi.py  urls.py  views.py  wsgi.py
backend/templates/: 400.html  403.html  404.html  500.html  csrf_error.html  index.html
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_commend_comment.py  0003_post_thumbnail.py
burgers/: admin.py
burgers/migrations/: 0001_initial.py
config/: settings.py  urls.py  views.py
datasets/: registration.json
infra/gunicorn/: gunicorn.conf.py
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
pages/: data.py  login.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_hashtag_post_tags.py
posts/templatetags/: custom_tags.py
templates/: _base.html  base_profile.html  base_slider.html  burger_list.html  burger_search.html  index.html  main.html  nav.html  post_add.html  post_detail.html  post_list.html
templates/posts/: feeds.html  post.html  post_add.html  post_detail.html  tags.html
templates/users/: followers.html  following.html  login.html  profile.html  signup.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_profile_image_user_short_description.py  0003_user_like_posts.py  0004_relationship.py  0005_user_following.py
(+22 files in other folders)
